# SpaCo_py

./: .gitignore  .pre-commit-config.yaml  .sh_history  CrossBread_Nis.Rmd  CustomSCTransform.R  Dockerfile  Liver_seurat.R  PCA_Tutorial.Rmd  Questions_onSCA.txt  README.md  docker_runImage.sh  find_regex.sh  generateLiver_seurat.R  pyproject.toml  python.py  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  update_SPACO_tutorial.R
.config/rstudio/: rstudio-prefs.json
.local/share/rstudio/: history_database  persistent-state  rstudio-server.json
.local/share/rstudio/client-state/: themes.persistent  workbenchp.persistent
.local/share/rstudio/pcs/: windowlayoutstate.pper
.local/share/rstudio/projects_settings/: project-id-mappings
.local/share/rstudio/sessions/active/session-0ed23d7a/: session-persistent-state
.local/share/rstudio/sessions/active/session-0ed23d7a/properites/: created  last-used  last_resumed  last_state_updated
R_scripts/: OMEN_main_function.R  Single_modality_SPACO.R  kr_sctransform.R  update_SPACO_tutorial.R
src/: CMakeLists.txt  hello.py  imhoff.cpp  imhoff_prob.cpp  imhoff_pythonVersion.py  python.py  stridirs.sh
src/spaco_py/: OMEN.py  SPACO_TestRun.ipynb  SpaCoObject.py  __init__.py  coords_brain.xlsx  main.py  spaco.py  unittests.py
