[project]
name = "spaco-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "anyio==4.8.0",
    "appdirs==1.4.4",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "attrs==24.3.0",
    "babel==2.16.0",
    "beautifulsoup4==4.12.3",
    "black==22.12.0",
    "bleach==6.2.0",
    "build==1.2.2.post1",
    "cachecontrol==0.14.2",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "cfgv==3.4.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "cleo==2.1.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "comm==0.2.2",
    "crashtest==0.4.1",
    "debugpy==1.8.12",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "detect-secrets==1.4.0",
    "diff-cover==9.2.1",
    "distlib==0.3.9",
    "dulwich==0.22.7",
    "entrypoints==0.4",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "filelock==3.17.0",
    "flake8==6.0.0",
    "fqdn==1.5.1",
    "identify==2.6.6",
    "idna==3.10",
    "iniconfig==2.0.0",
    "installer==0.7.0",
    "ipykernel==6.29.5",
    "ipython==8.31.0",
    "ipython-genutils==0.2.0",
    "isoduration==20.11.0",
    "isort==5.12.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.1.0",
    "jedi==0.19.2",
    "jinja2==3.1.5",
    "joblib==1.4.2",
    "json5==0.10.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==7.4.9",
    "jupyter-core==5.7.2",
    "jupyter-events==0.11.0",
    "jupyter-server==2.15.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==3.5.2",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "keyring==25.6.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mccabe==0.7.0",
    "mistune==3.1.0",
    "more-itertools==10.6.0",
    "msgpack==1.1.0",
    "mypy-extensions==1.0.0",
    "nbclassic==1.2.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.5",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "nodeenv==1.9.1",
    "nose==1.3.7",
    "notebook==6.5.7",
    "notebook-shim==0.2.4",
    "numpy==2.2.2",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pip==24.3.1",
    "pip-tools==7.4.1",
    "pkginfo==1.12.0",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "poetry==2.0.1",
    "poetry-core==2.0.1",
    "pre-commit==2.21.0",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.50",
    "psutil==6.1.1",
    "pure-eval==0.2.3",
    "pycodestyle==2.10.0",
    "pycparser==2.22",
    "pyflakes==3.0.1",
    "pygments==2.19.1",
    "pyproject-hooks==1.2.0",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.2.1",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "rapidfuzz==3.11.0",
    "referencing==0.36.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rpds-py==0.22.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "send2trash==1.8.3",
    "setuptools==75.8.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlfluff==1.4.5",
    "stack-data==0.6.3",
    "tblib==3.0.0",
    "terminado==0.18.1",
    "threadpoolctl==3.5.0",
    "tinycss2==1.4.0",
    "toml==0.10.2",
    "tomli==2.2.1",
    "tomlkit==0.13.2",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "trove-classifiers==2025.1.15.22",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.12.2",
    "uri-template==1.3.0",
    "urllib3==2.3.0",
    "virtualenv==20.29.1",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "wheel==0.45.1",
]

[build-system]
requires = ["setuptools>=61", "wheel", "cython"]
build-backend = "setuptools.build_meta"
